# ivd_splat_eth3d_integration

./: .gitignore  README.md  prepare_dataset.py  requirements.txt
eth3d_nerfbaselines_loader/: README.md  pyproject.toml
eth3d_nerfbaselines_loader/src/eth3d_nerfbaselines_loader/: eth3d_loader.py  register_eth3d_loader.py
